# mpu6500rs

./: .gitignore  Cargo.toml  README.md
examples/blocking/: Cargo.toml
examples/mpu6500test/: Cargo.toml
examples/stm32l4-blocking/: Cargo.toml
examples/stm32l4-blocking/.cargo/: config.toml
examples/stm32l4-blocking/src/: lib.rs
src/: lib.rs  register.rs  units.rs
src/blocking_driver/: mod.rs  mpu6500_sys.rs  sensor.rs
src/mpu6500/: mod.rs  mpu6500.rs  mpu6500_sys.rs  sensor.rs  units.rs
src/sync_driver/: mod.rs  mpu6500_sys.rs  register.rs  sensor.rs
src/tests/qa_tests/: Cargo.toml
